# candlezip

./: .gitignore  Cargo.toml  OPTIMIZATION.md  README.md  benchmark.sh  build.ps1  guide.md  prepare_distillation.py  science_tool.py  test_block_logic.py  train_gru.py  utf8check.py
.cargo/: config.toml
agent/: README_HITL.md  _deterministic_mock_agent_cli.py  _oldcli.py  agent_cli.py  agent_human.py  agent_nomem.py  agent_v2.py  agent_v2_mem.py  mcp_config.json  requirements_hitl.txt
agent-rs/: Cargo.toml  README.md
agent-rs/src/: main.rs
benchmarks/: agent_data.jsonl  arxiv_id_smoke.gptz  arxiv_id_smoke.roundtrip.txt  arxiv_test.gptz  arxiv_test.roundtrip.txt  arxivbenchmark  arxivbenchmark.gptz  arxivbenchmark_v2.gptz  min_arxiv.gptz  min_arxiv.roundtrip.txt  pythoncodebenchmark  pythoncodebenchmark.gptz  tiny.gptz  wikipediabenchmark  wikipediabenchmark.gptz
benchmarks/arxivbenchmark-mcp-cache/: download_paper-050e55e5deaad83a564dba8098627dfec0f7b4aff8e6ace84ec013e9f3aa8100.cache  download_paper-1d234326d86a5e4731398b25bbcd0edfd89aa7d9aa448a871ad00efc50af36d4.cache  download_paper-2e376e15ca0dc300771032cb214c61d62e7051840c355362e9d6af3574c71345.cache  download_paper-380a1162171c3a7a022d9ee70e2d3fef48718518ec3263448e718cacd15e02ec.cache  download_paper-548d5e356157b8133316dfcb4394c6017684e3ef3503ab6a70b7d3e55116c248.cache  download_paper-58a7291685b6bce15e563122c908b3c7b192dc2429787a7adc5ffd4418cbd338.cache  download_paper-5f4fbbb19bb396562950cbd531afb47a769cc145ff29e1794b1283a001093292.cache  download_paper-925c18ca95e68204035a399e63d2694b2225a6337119653660809825fea1a52c.cache  download_paper-92d655d59a891f16aab77d8f0d453a342b3fed6ead5e13b849e99c15ee950157.cache  download_paper-9938eb19ddc69148d46531db9aab8b1624b07c04175e7d5cc3cacc0c70bb62e6.cache  download_paper-b99b2fb52caa207e3b996c9bd6c8c68be330ff15b203f0c93d123b8ce95b75da.cache  download_paper-bb5d1bc48be90d180c0fe094cb33c003195be6c2f96ed800632591abfaa6db3e.cache  download_paper-c08183171f1b6dc1a00312c917fcd621dd607978dd6e8843c4c505654b66b243.cache  download_paper-c142542c4fc1a06f753ee34a26807ffa11c22f669504316aca3d1fa2f11c259a.cache  download_paper-cd6f51a74554f756c65d22b2c30bf12573ba220a3c5c5388c2cce2213790039f.cache  search_papers-01709536fca5e44a1e2e13c269095b8cd20d8a5f2c5c9d515a698f800673a80e.cache  search_papers-0db3f7712480fe1ac7739d4264f20c8ae99558d4fb116ecfc64e159b534edb9a.cache  search_papers-1ecf9f85579047b8302e81538841b0f776544d8e17f7869b0bb6185f55e543be.cache  search_papers-268192baf4da0891a8db73897ef3a322274349040d95ac51af0e9e249385c75b.cache  search_papers-2b4318104843c20ecc16ca5f0a9f9b556952eecfe3be96c72d6edd4cbaed3116.cache  search_papers-2d1bd1c3826b3b2ffb429a411b28ef4333f42a3061a3e07ac0e5de51cfa9f1f3.cache  search_papers-31b8bf34d9a7d2bb820e73c5a113b88ea9691200c1a99bef9a78bba207542481.cache  search_papers-4e01ab7d483655927317e8316b6fd62f8ffd1ec9c3e9270a2aec5e6e60ff27a1.cache  search_papers-56a3c3a5cc2981a001f98429c55ec69d0ae54e267d8329ea7008e68720125a5f.cache  search_papers-898136b14e6acfbaa20cc2f195e9391c5c71715bfdf3dc4042b78f90a8bef1c5.cache  search_papers-9178447c9c2fe0a489e600a216f370f95b88aab3448a0e9ab7c7e6502c818653.cache  search_papers-97f8fe4bc3cd8d7b714b9aff0c55e676dae07997ef130d7b7098ca0e4e76379b.cache  search_papers-a10f7bea995b0ceb9a04a91fb010fd5b82566f5b923522491b26c262623d25c2.cache  search_papers-cab8bf7d023474d9cf50dd9ff21555ecb16a6e969b81a8a3da6fb97f08ed8376.cache  search_papers-e3d73163af92dd1c12abcf233c924a9af1eb582c728605c81152c936fefc03f7.cache  search_papers-f083efd1cf794ea2ed17c17ddadc4552374144f9680fca1ecb63b78fc0d05fe2.cache  search_wikipedia-20fec4d0b74a6b86e23ba003850695d3a9819bc5c408d36f80e199f2faef6db7.cache  search_wikipedia-282e6a1a209a843e874d8f6d83f24e7bdd58e38ae14b93ad060f87dbb5e6a44f.cache  search_wikipedia-3b1d1a6ff52ef1cf0ff7f648cd33618b053894a8f18d3a04d970aa0bee96dbfd.cache  search_wikipedia-443805458eae2a0985dc826190dfb9739aadc5cfe09273fe5df4165caca8e17a.cache  search_wikipedia-645b7154ada089a47ea5e6b366e2a6804c97778854b87f17d9ffe4e357561dd6.cache  search_wikipedia-6980cfc236237e08fa10b4ff857623c0ab3755adc59bf91a9b73e17061000e28.cache  search_wikipedia-704ebf546b99e029a1e2c77a5c0cfe50b78686c42f316ecb5b9b4b2d5a7754cb.cache  search_wikipedia-91c29cb6ba173db75496a16e900c30898757336cc0ac7a606a8885933ae64387.cache  search_wikipedia-91c93b2a2c7b0c81312ce5adf0da3528140ec0f4715f6bcb1ef49811256c0d58.cache  (+9 more)
candle_rwkv7/: Cargo.toml  compare_with_reference.py  convert_pth_direct.py
candle_rwkv7/examples/: convert.rs  verify_math.rs
candle_rwkv7/src/: lib.rs
candle_rwkv7/src/models/: rwkv7.rs
candle_rwkv7/src/models/quantized/: mod.rs
examples/: chat.rs
final_bench/: parse.py  ref.md
final_bench/cantrbry/: alice29.canz  asyoulik.canz  fields.canz
final_bench/enwik8_samples/: enwik8_128kb_0.canz  enwik8_128kb_0.roundtrip.txt  enwik8_128kb_1  enwik8_128kb_10  enwik8_128kb_11  enwik8_128kb_12  enwik8_128kb_13  enwik8_128kb_14  enwik8_128kb_15  enwik8_128kb_16  enwik8_128kb_17  enwik8_128kb_18  enwik8_128kb_19  enwik8_128kb_2  enwik8_128kb_20  enwik8_128kb_21  enwik8_128kb_22  enwik8_128kb_23  enwik8_128kb_3  enwik8_128kb_4  enwik8_128kb_5  enwik8_128kb_6  enwik8_128kb_7  enwik8_128kb_8  enwik8_128kb_9
final_bench/synthetic/: alphabet.txt
gru_trainer/: __init__.py  data.py  model.py  train.py
negent/: Cargo.toml
negent/src/: lib.rs
results_300s_nomem/alice29_selftest_smollm_20251003_043405/: agent_cache.jsonl  meta.json  proof.csv  watchdog_decode_steps.jsonl  watchdog_mismatch.json
results_300s_nomem/alice29_selftest_smollm_20251003_043405/agent_memory/: .crewai_user.json  candlezip_alice29_90daa536_learning.jsonl  latest_kickoff_task_outputs.db  memory.txt
results_300s_nomem/asyoulik_selftest_smollm_20251003_121454/: agent_cache.jsonl  meta.json  proof.csv  watchdog_decode_steps.jsonl
results_300s_nomem/asyoulik_selftest_smollm_20251003_121454/agent_memory/: .crewai_user.json  candlezip_asyoulik_7cc751c3_learning.jsonl  latest_kickoff_task_outputs.db  (+1 more)
scan_output/: meta.json  proof.csv
src/: main.rs  models.rs
src/models/: mod.rs
(+8 files in other folders)
