[package]
name = "rwkvzip"
version = "0.1.0"
edition = "2021"
description = "RWKV7-based text compressor with 64-bit arithmetic coder"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokenizers = "0.19"

candlerwkv7 = { path = ".." }

candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
candle-transformers = { version = "0.9.1", features = ["cuda"] }

[profile.release]
# Maximize runtime performance
opt-level = 3          # Highest optimization level
lto = "fat"            # Whole-program LTO across crates
codegen-units = 1      # Single CGU favors better inlining/optimization
incremental = false    # Ensure fully optimized builds (no incremental)
panic = "abort"        # Smaller, faster binaries (no unwinding)
strip = "symbols"      # Remove symbols in release (smaller/faster startup)
debug = 0              # No debug info
overflow-checks = false
debug-assertions = false

# Make `cargo bench` behave like release
[profile.bench]
inherits = "release"

# (Optional) Faster dev builds while still pretty snappy
[profile.dev]
opt-level = 1
debug-assertions = true
incremental = true

