[package]
name = "candlezip"
version = "0.1.0"
edition = "2021"
description = "Worlds First Agentic Compressor, powered by Candle."
license = "GPL-3.0"
authors = ["Noah Cashin <noahc959@icloud.com>"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
byteorder = "1.5"
clap = { version = "4.5", features = ["derive"] }
hf-hub = "0.4"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokenizers = "0.19"
csv = "1.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
regex = "1.10"

# Candle (CUDA enabled by default)
candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
candle-transformers = { version = "0.9.1", features = ["cuda"] }

# Internal RWKV7 lib
candlerwkv7 = { path = "candle_rwkv7" }

[features]
default = []


