[package]
name = "agent-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Rig core (LLM agent framework) with MCP support from crates.io
rig-core = { version = "0.19", features = ["rmcp"] }

# RMCP client to connect to MCP servers via stdio (match rig-core's rmcp 0.5)
rmcp = { version = "0.5", features = [
  "client",
  "transport-child-process"
] }
