[package]
name = "negent"
version = "0.1.0"
edition = "2021"
description = "Library for approximating Kolmogorov complexity via RWKV7 arithmetic coding (bit-length, conditional length, NCD)."
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

# RWKV7 implementation from the root crate
candlerwkv7 = { path = ".." }

# Candle stack (match versions used elsewhere)
candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
candle-transformers = { version = "0.9.1", features = ["cuda"] }
indicatif = "0.17"
